devops-automation/cluster.tf
data "template_file" "startup_script" {
  template = file("docker.sh")
}

resource "google_compute_instance" "cluster_instance" {
  name         = "cluster-instance"
  machine_type = "e2-medium"
  zone         = "us-central1-a"


  boot_disk {
    initialize_params {
      image = "ubuntu-os-cloud/ubuntu-2004-lts"
      size          = 500
    }
  }

  network_interface {
    network = google_compute_network.vpc-network.id
    access_config {}
  }


  tags = ["cluster-instance"]

    metadata_startup_script = data.template_file.startup_script.rendered
}
